--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.473.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-client-cache": "^2.0.0",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
